// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navtabs should render into nav element 2`] = `
<div>
  <nav
    class="nav"
  >
    <a
      class="link"
      href="/today"
    >
      <div
        data-testid="react-feather Clock icon"
      />
      <span
        class="title"
      >
        Today
      </span>
    </a>
    <a
      class="link"
      href="/timetable/sem-1"
    >
      <div
        data-testid="react-feather Calendar icon"
      />
      <span
        class="title"
      >
        Timetable
      </span>
    </a>
    <a
      class="link"
      href="/modules?sem[0]=1&sem[1]=2&sem[2]=3&sem[3]=4"
    >
      <div
        data-testid="react-feather BookOpen icon"
      />
      <span
        class="title"
      >
        Modules
      </span>
    </a>
    <a
      class="link"
      href="/venues"
    >
      <div
        data-testid="react-feather Map icon"
      />
      <span
        class="title"
      >
        Venues
      </span>
    </a>
    <a
      class="link"
      href="/settings"
    >
      <div
        data-testid="react-feather Settings icon"
      />
      <span
        class="title"
      >
        Settings
      </span>
    </a>
    <a
      class="link hiddenOnMobile"
      href="/contribute"
    >
      <div
        data-testid="react-feather Star icon"
      />
      <span
        class="title"
      >
        Contribute
      </span>
    </a>
    <div
      class="divider"
    />
    <a
      class="link hiddenOnMobile"
      href="https://nuswhispers.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        data-testid="react-feather Heart icon"
      />
      <span
        class="title"
      >
        Whispers
      </span>
    </a>
  </nav>
  ,
</div>
`;

exports[`Navtabs should show beta tabs if beta is true 2`] = `
<div>
  <nav
    class="nav"
  >
    <a
      class="link"
      href="/today"
    >
      <div
        data-testid="react-feather Clock icon"
      />
      <span
        class="title"
      >
        Today
      </span>
    </a>
    <a
      class="link"
      href="/timetable/sem-1"
    >
      <div
        data-testid="react-feather Calendar icon"
      />
      <span
        class="title"
      >
        Timetable
      </span>
    </a>
    <a
      class="link"
      href="/modules?sem[0]=1&sem[1]=2&sem[2]=3&sem[3]=4"
    >
      <div
        data-testid="react-feather BookOpen icon"
      />
      <span
        class="title"
      >
        Modules
      </span>
    </a>
    <a
      class="link"
      href="/venues"
    >
      <div
        data-testid="react-feather Map icon"
      />
      <span
        class="title"
      >
        Venues
      </span>
    </a>
    <a
      class="link hiddenOnMobile"
      href="/planner"
    >
      <div
        data-testid="react-feather Trello icon"
      />
      <span
        class="title"
      >
        Planner
      </span>
    </a>
    <a
      class="link"
      href="/settings"
    >
      <div
        data-testid="react-feather Settings icon"
      />
      <span
        class="title"
      >
        Settings
      </span>
    </a>
    <a
      class="link hiddenOnMobile"
      href="/contribute"
    >
      <div
        data-testid="react-feather Star icon"
      />
      <span
        class="title"
      >
        Contribute
      </span>
    </a>
    <div
      class="divider"
    />
    <a
      class="link hiddenOnMobile"
      href="https://nuswhispers.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        data-testid="react-feather Heart icon"
      />
      <span
        class="title"
      >
        Whispers
      </span>
    </a>
  </nav>
  ,
</div>
`;
